--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
             맞힘 = true;
             $(`.box`).css('opacity', '0');
          }
+         else{
+            alert('❌ 오답입니다~')
+         }
 
       })
       console.log(count)
